--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ html h2, body h2 {
 #card #front #top-pic {
   height: 50%;
   width: 100%;
-  background-image: url('../dist/bg.jpg');
+  background-image: url('../bg.jpg');
   background-size: cover;
 }
 #card #front #avatar {
@@ -85,7 +85,7 @@ html h2, body h2 {
   margin: -77px 0 0 -57px;
   border-radius: 100%;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.8), 0 4px 5px rgba(107, 5, 0, 0.6), 0 0 50px 50px rgba(255, 255, 255, 0.25);
-  background-image: url('../dist/avatar.png');
+  background-image: url('../avatar.png');
   background-size: contain;
   position: absolute;
   z-index: 1;
@@ -191,7 +191,7 @@ html h2, body h2 {
   top: -30px;
   left: -30px;
   -webkit-filter: blur(10px);
-  background-image: url('../dist/bg.jpg');
+  background-image: url('../bg.jpg');
   background-size: cover;
 }
 
