--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ html h2, body h2 {
   margin: -77px 0 0 -57px;
   border-radius: 100%;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.8), 0 4px 5px rgba(107, 5, 0, 0.6), 0 0 50px 50px rgba(255, 255, 255, 0.25);
-  background-image: url('..![](/avatar.png)');
+  background-image: url(https://github.com/kiyoshi847/vCard/blob/main/avatar.png);
   background-size: contain;
   position: absolute;
   z-index: 1;
